data/derived/sp14/progs/unify/prog0678.ml.out
Characters 14-27:
  (stringOfList string_of_int);;
                ^^^^^^^^^^^^^
Error: This expression has type int -> string
       but an expression was expected of type string -> string
       Type int is not compatible with type string 
